# local

./: .gitignore  Cargo.toml  README.md  package.json
benchmarks/: BENCHMARKS.md
docker/: supervisord.conf
docs/: query-response-processing.md
scripts/: README.md  local-build.sh  local-start.sh  local-status.sh  local-stop.sh  model-fetch.sh
scripts/dev/: local-build.sh  local-start.sh  local-status.sh  local-stop.sh
specs/: architecture-v1.md  cli-v1.md  current-implementation.md  daemon-api-mcp-v1.md
src/: add_docs.rs  cli_client.rs  embed.rs  extract.rs  falkor_store.rs  file_tree.rs  google.rs  helix_store.rs  indexer.rs  lancedb_store.rs  main.rs  memkit_txt.rs  ontology.rs  ontology_candle.rs  ontology_llama.rs  pack.rs  pack_location.rs  publish.rs  query.rs  query_synth.rs  registry.rs  rerank.rs  server.rs  term.rs  types.rs  validate.rs
src/cli/: types.rs
src/ontology/: mod.rs
src/pack/: mod.rs
src/query/: mod.rs
tests/: api_smoke.rs
