[package]
name = "memkit"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mk"
path = "src/main.rs"

[features]
default = ["lance-falkor"]
llama-embedded = ["dep:llama-cpp-2", "dep:encoding_rs"]
# Lance + Falkor backend (default)
lance-falkor = ["dep:lancedb", "dep:lance-index", "dep:redis"]
# Helix backend (one LMDB per pack)
helix = ["dep:helix-db", "dep:bumpalo", "dep:heed3"]
# Helix-only build: no Lance/Falkor. Use: cargo build --release --no-default-features --features helix,store-helix-only
store-helix-only = ["helix"]

[dependencies]
anyhow = "1"
# Helix: crates.io 1.0.115 has build errors; use git main until a fix is published
helix-db = { git = "https://github.com/HelixDB/helix-db.git", optional = true }
bumpalo = { version = "3", optional = true }
heed3 = { version = "0.22", optional = true }
aws-config = "1.4"
aws-sdk-s3 = "1.54"
colored_json = "5"
owo-colors = { version = "4", features = ["supports-colors"] }
arrow-array = "57"
arrow-schema = "57"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
fastembed = "5"
futures-util = "0.3"
glob = "0.3"
lancedb = { version = "0.26", features = ["aws"], optional = true }
lance-index = { version = "2.0", optional = true }
litchi = "0.0.1"
llama-cpp-2 = { version = "0.1.138", optional = true }
notify = "8"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
encoding_rs = { version = "0.8.35", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
petname = "2"
walkdir = "2"
redis = { version = "1.0.4", optional = true }
opener = "0.8"
pdf-extract = "0.10"
yup-oauth2 = { version = "12", features = ["hyper-rustls"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio"] }
hyper-rustls = "0.27"
urlencoding = "2"
